migrate to react

--- a/src/static/locales/de.json
+++ b/src/static/locales/de.json
@@ -1,8 +1,8 @@
 {
   "meta": {
-    "title": "Unbezahlbar Karte",
-    "titleShort": "Unbezahlbar",
-    "description": "Erlebe die Welt. Gratis."
+    "title": "Nachhaltig Karte",
+    "titleShort": "Nachhaltig",
+    "description": "Erlebe die Welt nachhaltig."
   },
   "search": {
     "placeholder": "Einen Ort suchen"
