--- a/src/static/locales/en.json
+++ b/src/static/locales/en.json
@@ -1,8 +1,8 @@
 {
   "meta": {
-    "title": "Priceless map",
-    "description": "Experience the world. Free of charge.",
-    "titleShort": "Priceless"
+    "title": "Sustainable map",
+    "description": "Experience the world sustainably.",
+    "titleShort": "Sustainable"
   },
   "search": {
     "placeholder": "Search a location"
