cleanup, add intro

--- a/src/client/locales/en.json
+++ b/src/client/locales/en.json
@@ -8,6 +8,40 @@
   "search": {
     "placeholder": "Search a location"
   },
+  "intro": {
+    "title": "Sustainable",
+    "tagline": "Experience the world sustainably.",
+    "description": "This is a map that shows facilities and services in your area that are environmentally, socially and economically sustainable.",
+    "legend": "The map helps to draw attention to sustainable strategies such as",
+    "accessible": "Publicly accessible",
+    "freeOfCharge": "Free of charge",
+    "social": "Social",
+    "production": "Environmentally friendly production",
+    "organic": "Organic",
+    "seasonal": "Seasonal",
+    "vegetarian": "Vegetarian",
+    "packed": "Environmentally friendly packed",
+    "unpacked": "Unpacked",
+    "zeroWaste": "Zero waste",
+    "fairTrade": "Fair trade",
+    "transport": "Short transport distances",
+    "regional": "Regional",
+    "sharing": "Sharing",
+    "lending": "Lending",
+    "repair": "Repair",
+    "reuse": "Reuse",
+    "recycling": "Recycling",
+    "community": "Community",
+    "participation": "Participation",
+    "osm": "The information is loaded from OpenStreetMap.",
+    "license": "The app is licensed under the <a>GNU Affero General Public License v3.0</a>. The code is free for use, copying and modification if you publish under the same license.",
+    "viewSourceCode": "View the source code on GitHub.",
+    "translate": "Help translate",
+    "translationStatus": "Translation status",
+    "contribute": "How to contribute to OSM",
+    "moreApps": "More apps based on OSM",
+    "aboutMe": "About me"
+  },
   "info": {
     "osmTags": "Documentation",
     "query": "Query",
