--- a/src/client/locales/en.json
+++ b/src/client/locales/en.json
@@ -33,7 +33,7 @@
     "recycling": "Recycling",
     "community": "Community",
     "participation": "Participation",
-    "osm": "The information is loaded from <o>OpenStreetMap</o>. <e>Add places you know.<e>",
+    "osm": "The information is loaded from <o>OpenStreetMap</o>. <e>Add places you know.</e>",
     "license": "The app is licensed under the <l>GNU Affero General Public License v3.0</l>. The <c>code</c> is free for use, copying and modification if you publish under the same license.",
     "translate": "Help translate",
     "translationStatus": "Translation status",
