--- a/src/client/locales/en.json
+++ b/src/client/locales/en.json
@@ -42,6 +42,7 @@
     "aboutMe": "About me"
   },
   "info": {
+    "moreFilters": "More filters:",
     "osmTags": "Documentation",
     "query": "Query",
     "overpassTurbo": "overpass-turbo"
