--- a/src/osm-app-component/locales/pl.json
+++ b/src/osm-app-component/locales/pl.json
@@ -16,5 +16,7 @@
     "note": "Dodaj notkę dla innych tworzących mapy",
     "share": "Udostępnij to miejsce"
   },
-  "route": "Trasa"
+  "route": "Trasa",
+  "open": "Otwarte",
+  "closed": "Zamknięte"
 }
