--- a/src/osm-app-component/locales/de.json
+++ b/src/osm-app-component/locales/de.json
@@ -2,7 +2,7 @@
   "code": "de",
 
   "info": {
-    "moreFilters": "Ergebnisse filtern:",
+    "moreFilters": "Mehr Filter:",
     "osmTags": "Dokumentation",
     "query": "Abfrage",
     "overpassTurbo": "overpass-turbo",
