--- a/src/osm-app-component/locales/en.json
+++ b/src/osm-app-component/locales/en.json
@@ -2,7 +2,7 @@
   "code": "en",
 
   "info": {
-    "moreFilters": "Filter results:",
+    "moreFilters": "More filters:",
     "osmTags": "Documentation",
     "query": "Query",
     "overpassTurbo": "overpass-turbo",
